[gd_scene load_steps=9 format=2]

[ext_resource path="res://world.gd" type="Script" id=1]
[ext_resource path="res://temperature/temperature.material" type="Material" id=2]
[ext_resource path="res://temperature/temperature_view.shader" type="Shader" id=3]

[sub_resource type="Gradient" id=3]

offsets = PoolRealArray( 0, 0.4, 0.6, 1 )
colors = PoolColorArray( 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 1 )

[sub_resource type="GradientTexture" id=4]

flags = 4
gradient = SubResource( 3 )
width = 2048

[sub_resource type="ShaderMaterial" id=5]

render_priority = 0
shader = ExtResource( 3 )
shader_param/gradient = SubResource( 4 )
_sections_unfolded = [ "shader_param" ]

[sub_resource type="ViewportTexture" id=6]

resource_local_to_scene = true
flags = 0
viewport_path = NodePath("Field")

[sub_resource type="ViewportTexture" id=7]

resource_local_to_scene = true
flags = 0
viewport_path = NodePath("ConductionField")

[node name="World" type="Node" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="Background" type="CanvasLayer" parent="." index="0"]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="BackgroundColor" type="ColorRect" parent="Background" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )

[node name="ConductionField" type="Viewport" parent="." index="1"]

editor/display_folded = true
arvr = false
size = Vector2( 200, 200 )
own_world = false
world = null
transparent_bg = false
msaa = 0
hdr = false
disable_3d = false
usage = 0
debug_draw = 0
render_target_v_flip = true
render_target_clear_mode = 1
render_target_update_mode = 3
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4

[node name="ClearColor" type="ColorRect" parent="ConductionField" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "Anchor" ]

[node name="Field" type="Viewport" parent="." index="2"]

editor/display_folded = true
arvr = false
size = Vector2( 200, 200 )
own_world = false
world = null
transparent_bg = false
msaa = 0
hdr = false
disable_3d = false
usage = 0
debug_draw = 0
render_target_v_flip = true
render_target_clear_mode = 2
render_target_update_mode = 3
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4

[node name="BufferCopy" type="BackBufferCopy" parent="Field" index="0"]

copy_mode = 2
rect = Rect2( -100, -100, 200, 200 )

[node name="TempLogic" type="ColorRect" parent="Field" index="1"]

material = ExtResource( 2 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "Material" ]

[node name="TemperatureView" type="Sprite" parent="." index="3"]

material = SubResource( 5 )
texture = SubResource( 6 )
centered = false
_sections_unfolded = [ "Material", "Offset", "Transform" ]

[node name="ConductionView" type="Sprite" parent="." index="4"]

visible = false
texture = SubResource( 7 )
centered = false


